src/importer/table/snapshots/annatto__importer__table__tests__custom_generic_config.snap
---
source: src/importer/table/tests.rs
expression: actual.unwrap()
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k1" for="node" attr.name="custom_ns::lemma" attr.type="string"/>
    <key id="k2" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k3" for="node" attr.name="custom_ns::norm" attr.type="string"/>
    <key id="k4" for="node" attr.name="custom_ns::pos" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <node id="custom_root">
            <data key="k2">corpus</data>
        </node>
        <node id="custom_root/example">
            <data key="k0">example</data>
            <data key="k2">corpus</data>
        </node>
        <node id="custom_root/example#t1">
            <data key="k1">Feigenblatt</data>
            <data key="k2">node</data>
            <data key="k3">Feigenblatt</data>
            <data key="k4">NN</data>
        </node>
        <node id="custom_root/example#t2">
            <data key="k1">die</data>
            <data key="k2">node</data>
            <data key="k3">Die</data>
            <data key="k4">ART</data>
        </node>
        <node id="custom_root/example#t3">
            <data key="k1">Jugendliche</data>
            <data key="k2">node</data>
            <data key="k3">Jugendlichen</data>
            <data key="k4">NN</data>
        </node>
        <node id="custom_root/example#t4">
            <data key="k1">in</data>
            <data key="k2">node</data>
            <data key="k3">in</data>
            <data key="k4">APPR</data>
        </node>
        <node id="custom_root/example#t5">
            <data key="k1">Zossen</data>
            <data key="k2">node</data>
            <data key="k3">Zossen</data>
            <data key="k4">NE</data>
        </node>
        <node id="custom_root/example#t6">
            <data key="k1">wollen</data>
            <data key="k2">node</data>
            <data key="k3">wollen</data>
            <data key="k4">VMFIN</data>
        </node>
        <node id="custom_root/example#t7">
            <data key="k1">ein</data>
            <data key="k2">node</data>
            <data key="k3">ein</data>
            <data key="k4">ART</data>
        </node>
        <node id="custom_root/example#t8">
            <data key="k1">Musikcafé</data>
            <data key="k2">node</data>
            <data key="k3">Musikcafé</data>
            <data key="k4">NN</data>
        </node>
        <node id="custom_root/example#t9">
            <data key="k2">node</data>
            <data key="k3">.</data>
            <data key="k4">$.</data>
        </node>
        <node id="custom_root/example#t10">
            <data key="k1">das</data>
            <data key="k2">node</data>
            <data key="k3">Das</data>
            <data key="k4">PDS</data>
        </node>
        <node id="custom_root/example#t11">
            <data key="k1">fordern</data>
            <data key="k2">node</data>
            <data key="k3">forderten</data>
            <data key="k4">VVFIN</data>
        </node>
        <node id="custom_root/example#t12">
            <data key="k1">sie</data>
            <data key="k2">node</data>
            <data key="k3">sie</data>
            <data key="k4">PPER</data>
        </node>
        <node id="custom_root/example#t13">
            <data key="k1">bei</data>
            <data key="k2">node</data>
            <data key="k3">bei</data>
            <data key="k4">APPR</data>
        </node>
        <node id="custom_root/example#t14">
            <data key="k1">der</data>
            <data key="k2">node</data>
            <data key="k3">der</data>
            <data key="k4">ART</data>
        </node>
        <node id="custom_root/example#t15">
            <data key="k1">erste</data>
            <data key="k2">node</data>
            <data key="k3">ersten</data>
            <data key="k4">ADJA</data>
        </node>
        <node id="custom_root/example#t16">
            <data key="k1">Zossen</data>
            <data key="k2">node</data>
            <data key="k3">Zossener</data>
            <data key="k4">ADJA</data>
        </node>
        <node id="custom_root/example#t17">
            <data key="k1">Runde</data>
            <data key="k2">node</data>
            <data key="k3">Runde</data>
            <data key="k4">NN</data>
        </node>
        <node id="custom_root/example#t18">
            <data key="k1">an</data>
            <data key="k2">node</data>
            <data key="k3">am</data>
            <data key="k4">APPRART</data>
        </node>
        <node id="custom_root/example#t19">
            <data key="k1">Dienstagabend</data>
            <data key="k2">node</data>
            <data key="k3">Dienstagabend</data>
            <data key="k4">NN</data>
        </node>
        <node id="custom_root/example#t20">
            <data key="k2">node</data>
            <data key="k3">.</data>
            <data key="k4">$.</data>
        </node>
        <edge id="e0" source="custom_root/example#t1" target="custom_root/example#t2" label="Ordering/annis/">
        </edge>
        <edge id="e1" source="custom_root/example#t2" target="custom_root/example#t3" label="Ordering/annis/">
        </edge>
        <edge id="e2" source="custom_root/example#t3" target="custom_root/example#t4" label="Ordering/annis/">
        </edge>
        <edge id="e3" source="custom_root/example#t4" target="custom_root/example#t5" label="Ordering/annis/">
        </edge>
        <edge id="e4" source="custom_root/example#t5" target="custom_root/example#t6" label="Ordering/annis/">
        </edge>
        <edge id="e5" source="custom_root/example#t6" target="custom_root/example#t7" label="Ordering/annis/">
        </edge>
        <edge id="e6" source="custom_root/example#t7" target="custom_root/example#t8" label="Ordering/annis/">
        </edge>
        <edge id="e7" source="custom_root/example#t8" target="custom_root/example#t9" label="Ordering/annis/">
        </edge>
        <edge id="e8" source="custom_root/example#t9" target="custom_root/example#t10" label="Ordering/annis/">
        </edge>
        <edge id="e9" source="custom_root/example#t10" target="custom_root/example#t11" label="Ordering/annis/">
        </edge>
        <edge id="e10" source="custom_root/example#t11" target="custom_root/example#t12" label="Ordering/annis/">
        </edge>
        <edge id="e11" source="custom_root/example#t12" target="custom_root/example#t13" label="Ordering/annis/">
        </edge>
        <edge id="e12" source="custom_root/example#t13" target="custom_root/example#t14" label="Ordering/annis/">
        </edge>
        <edge id="e13" source="custom_root/example#t14" target="custom_root/example#t15" label="Ordering/annis/">
        </edge>
        <edge id="e14" source="custom_root/example#t15" target="custom_root/example#t16" label="Ordering/annis/">
        </edge>
        <edge id="e15" source="custom_root/example#t16" target="custom_root/example#t17" label="Ordering/annis/">
        </edge>
        <edge id="e16" source="custom_root/example#t17" target="custom_root/example#t18" label="Ordering/annis/">
        </edge>
        <edge id="e17" source="custom_root/example#t18" target="custom_root/example#t19" label="Ordering/annis/">
        </edge>
        <edge id="e18" source="custom_root/example#t19" target="custom_root/example#t20" label="Ordering/annis/">
        </edge>
        <edge id="e19" source="custom_root/example" target="custom_root" label="PartOf/annis/">
        </edge>
        <edge id="e20" source="custom_root/example#t1" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e21" source="custom_root/example#t2" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e22" source="custom_root/example#t3" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e23" source="custom_root/example#t4" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e24" source="custom_root/example#t5" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e25" source="custom_root/example#t6" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e26" source="custom_root/example#t7" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e27" source="custom_root/example#t8" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e28" source="custom_root/example#t9" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e29" source="custom_root/example#t10" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e30" source="custom_root/example#t11" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e31" source="custom_root/example#t12" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e32" source="custom_root/example#t13" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e33" source="custom_root/example#t14" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e34" source="custom_root/example#t15" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e35" source="custom_root/example#t16" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e36" source="custom_root/example#t17" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e37" source="custom_root/example#t18" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e38" source="custom_root/example#t19" target="custom_root/example" label="PartOf/annis/">
        </edge>
        <edge id="e39" source="custom_root/example#t20" target="custom_root/example" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
