src/importer/table/snapshots/annatto__importer__table__tests__serialize.snap
---
source: src/importer/table/tests.rs
expression: serialization.unwrap()
---
column_names = []
delimiter = "\t"
